# k8s-training-new-app1

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
project_x/: cli.py  main.py
project_x/settings/: base.py
